--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles.css">
-  <script src="./main.js"></script>
   <title>Just a clock</title>
 </head>
 <body>
-  <div class="face">
-    <div class="hand hour-hand"></div>
-    <div class="hand minute-hand"></div>
-    <div class="hand second-hand"></div>
-    <div class="nail"></div>
+  <div class="back">
+    <div class="face">
+      <div class="hand hour-hand"></div>
+      <div class="hand minute-hand"></div>
+      <div class="hand second-hand"></div>
+      <div class="nail"></div>
+    </div>
+    <div class="number twelve">12</div>
+    <div class="number three">3</div>
+    <div class="number six">6</div>
+    <div class="number nine">9</div>
   </div>
 </body>
+<script src="./main.js"></script>
 </html>
